fix login form positioning on mobile

--- a/Resources/assets/admin-lte-extensions.scss
+++ b/Resources/assets/admin-lte-extensions.scss
@@ -1,4 +1,6 @@
 
+@import "~bootstrap-sass/assets/stylesheets/bootstrap/variables";
+
 /*
  * This theme was upgraded to FONT AWESOME 5
  * which is not supported by the original "AdminLTE" theme yet.
@@ -50,11 +52,16 @@
     top: 0;
 }
 
-body.login-page {
-    .login-logo {
-        padding-top: 45px;
-        margin-bottom: 55px;
+@media (min-width: $screen-sm-min) {
+    body.login-page {
+        .login-logo {
+            padding-top: 45px;
+            margin-bottom: 55px;
+        }
     }
+}
+
+body.login-page {
     .login-box-body {
         padding: 20px;
         box-shadow: 0px 29px 147.5px 102.5px rgba(0, 0, 0, 0.05), 0px 29px 95px 0px rgba(0, 0, 0, 0.16);
